<resources>
    <string name="about_android">%1$s Android app</string>
    <string name="about_version">version %1$s</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_upload_from_apps">Content from other apps</string>
    <string name="actionbar_upload_files">Files</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="menu_item_sort_by_name_a_z">A - Z</string>
    <string name="menu_item_sort_by_name_z_a">Z - A</string>
    <string name="menu_item_sort_by_date_newest_first">Newest first</string>
    <string name="menu_item_sort_by_date_oldest_first">Oldest first</string>
    <string name="menu_item_sort_by_size_biggest_first">Biggest first</string>
    <string name="menu_item_sort_by_size_smallest_first">Smallest first</string>
    <string name="drawer_item_all_files">All files</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_favorites">Favorites</string>
    <string name="drawer_item_photos">Photos</string>
    <string name="drawer_item_on_device">On device</string>
    <string name="drawer_item_recently_added">Recently added</string>
    <string name="drawer_item_recently_modified">Recently modified</string>
    <string name="drawer_item_shared">Shared</string>
    <string name="drawer_item_videos">Videos</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_uploads_list">Uploads</string>
    <string name="drawer_item_activities">Activities</string>
    <string name="drawer_item_notifications">Notifications</string>
    <string name="drawer_quota">%1$s of %2$s used</string>
	<string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_more">More</string>
    <string name="prefs_manage_accounts">Manage accounts</string>
    <string name="prefs_passcode">Passcode lock</string>
    <string name="prefs_fingerprint">Fingerprint lock</string>
    <string name="prefs_fingerprint_notsetup">No fingerprints have been set up.</string>
    <string name="prefs_expert_mode">Expert mode</string>
    <string name="prefs_show_hidden_files">Show hidden files</string>
    <string name="prefs_log_delete_history_button">Delete history</string>
    <string name="prefs_calendar_contacts">Sync calendar &amp; contacts</string>
    <string name="prefs_calendar_contacts_summary">Set up DAVdroid (v1.3.0+) for current account</string>
    <string name="prefs_calendar_contacts_address_resolve_error">Server address for account could not be resolved for DAVdroid</string>
    <string name="prefs_calendar_contacts_no_store_error">Neither F-droid nor Google Play is installed</string>
    <string name="prefs_calendar_contacts_sync_setup_successful">Calendar &amp; contacts sync set up</string>
    <string name="prefs_daily_contacts_sync_summary">Daily backup of your contacts</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_recommend">Recommend to friend</string>
    <string name="prefs_feedback">Feedback</string>
    <string name="prefs_imprint">Imprint</string>
	<string name="recommend_subject">"Try %1$s on your smartphone!"</string>
	<string name="recommend_text">"I want to invite you to use %1$s on your smartphone.\nDownload here: %2$s"</string>
    <string name="recommend_urls">"%1$s or %2$s"</string>
    <string name="auth_check_server">Check server</string>
    <string name="auth_host_url">Server address https://&#8230;</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">Do you not have a server yet?\nClick here to get one from a provider</string>
    <string name="sync_string_files">Files</string>
    <string name="setup_btn_connect">Connect</string>
    <string name="uploader_btn_upload_text">Upload</string>
    <string name="uploader_btn_alternative_text">Choose</string>
    <string name="uploader_top_message">Choose upload folder</string>
    <string name="uploader_wrn_no_account_title">No account found</string>
    <string name="uploader_wrn_no_account_text">There are no %1$s accounts on your device. Please set up an account first.</string>
    <string name="uploader_wrn_no_account_setup_btn_text">Setup</string>
    <string name="uploader_wrn_no_account_quit_btn_text">Quit</string>
    <string name="uploader_error_title_no_file_to_upload">No file to upload</string>
    <string name="uploader_error_message_no_file_to_upload">Received data did not include a valid file.</string>
    <string name="uploader_error_title_file_cannot_be_uploaded">This file can not be uploaded</string>
    <string name="uploader_error_message_read_permission_not_granted">%1$s is not allowed to read a received file</string>
    <string name="uploader_error_message_source_file_not_found">File selected for upload not found. Please check whether the file exists.</string>
    <string name="uploader_error_message_source_file_not_copied">Could not copy file to a temporary folder. Try to resend it.</string>
    <string name="uploader_upload_files_behaviour">Upload option:</string>
    <string name="uploader_upload_files_behaviour_move_to_nextcloud_folder">Move file to Nextcloud folder</string>
    <string name="uploader_upload_files_behaviour_only_upload">Keep file in source folder</string>
    <string name="uploader_upload_files_behaviour_upload_and_delete_from_source">Delete file from source folder</string>
    <string name="file_list_seconds_ago">seconds ago</string>
    <string name="file_list_empty_headline">No files here</string>
    <string name="folder_list_empty_headline">No folders here</string>
    <string name="file_list_empty">Upload some content or sync with your devices.</string>
    <string name="file_list_empty_favorites_filter_list">Files and folders you mark as favorites will show up here</string>
    <string name="file_list_empty_favorites_filter">Your search returned no favorited files.</string>
    <string name="file_list_loading">Loading&#8230;</string>
    <string name="file_list_no_app_for_file_type">No app set up to handle this file type.</string>
    <string name="local_file_list_empty">There are no files in this folder.</string>
    <string name="local_folder_list_empty">There are no further folders.</string>
    <string name="file_list_empty_headline_search">No results in this folder</string>
    <string name="file_list_empty_headline_server_search">No results</string>
    <string name="file_list_empty_favorite_headline">Nothing favorited yet</string>
    <string name="file_list_empty_shared_headline">Nothing shared yet</string>
    <string name="file_list_empty_shared">Files and folders you share will show up here</string>
    <string name="file_list_empty_headline_server_search_videos">No videos</string>
    <string name="file_list_empty_headline_server_search_photos">No photos</string>
    <string name="file_list_empty_search">Maybe it is in a different folder?</string>
    <string name="file_list_empty_recently_modified">Found no files modified during the last 7 days</string>
    <string name="file_list_empty_recently_modified_filter">Search returned no files modified the last 7 days.</string>
    <string name="file_list_empty_recently_added">Found no recently added files</string>
    <string name="file_list_empty_recently_added_filter">Your search returned no recently added files.</string>
    <string name="file_list_empty_text_photos">Upload some photos or activate auto upload.</string>
    <string name="file_list_empty_text_photos_filter">Your search returned no photos.</string>
    <string name="file_list_empty_text_videos">Upload some videos or activate auto upload.</string>
    <string name="file_list_empty_text_videos_filter">Your search returned no videos.</string>
    <string name="file_item_metadata_separator" translatable="false">,</string>
    <string name="upload_list_empty_headline">No uploads available</string>
    <string name="upload_list_empty_text">Upload some content or activate instant uploading.</string>
    <string name="upload_list_empty_text_auto_upload">Upload some content or activate auto upload.</string>
    <string name="file_list_folder">folder</string>
    <string name="filedetails_select_file">Tap on a file to display additional information.</string>
    <string name="filedetails_size">Size:</string>
    <string name="filedetails_type">Type:</string>
    <string name="filedetails_created">Created:</string>
    <string name="filedetails_modified">Modified:</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Synchronize</string>
    <string name="filedetails_renamed_in_upload_msg">File renamed to %1$s during upload</string>
    <string name="list_layout">Listed layout</string>
    <string name="action_share">Share</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_remove_upload">Remove upload</string>
    <string name="common_retry_upload">Retry uploading</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_back">Back</string>
    <string name="common_save">Save</string>
    <string name="common_error">Error</string>
    <string name="common_loading">Loading &#8230;</string>
    <string name="common_unknown">unknown</string>
    <string name="common_error_unknown">Unknown error</string>
    <string name="common_pending">Pending</string>
    <string name="common_delete">Delete</string>
    <string name="about_title">About</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Remove account</string>
    <string name="delete_account_warning">Delete account %s with all local files?\n\nDeleting cannot be undone.</string>
    <string name="avatar">Avatar</string>
    <string name="active_user">Active user</string>
    <string name="upload_chooser_title">Upload from &#8230;</string>
    <string name="uploader_info_dirname">Folder name</string>
    <string name="uploader_upload_in_progress_ticker">Uploading &#8230;</string>
    <string name="uploader_upload_in_progress_content">%1$d%% Uploading %2$s</string>
    <string name="uploader_upload_succeeded_ticker">Uploaded</string>
    <string name="uploader_upload_succeeded_content_single">%1$s uploaded</string>
    <string name="uploader_upload_failed_ticker">Upload failed</string>
    <string name="uploader_upload_failed_content_single">Could not upload %1$s</string>
    <string name="uploader_upload_failed_credentials_error">Upload failed, you need to log in again</string>
    <string name="uploader_upload_failed_ssl_certificate_not_trusted">Server certificate is not trusted</string>
    <string name="uploads_view_upload_status_failed_ssl_certificate_not_trusted">Server certificate is not trusted</string>
    <string name="auto_upload_on_wifi">Only upload on Wi-Fi</string>
	<string name="actionbar_logger">Logs</string>
    <string name="prefs_category_details">Details</string>
    <string name="prefs_storage_path">Storage path</string>
    <string name="drawer_synced_folders">Auto upload</string>
    <string name="prefs_category_about">About</string>
    <string name="actionbar_contacts">Back up contacts</string>
    <string name="privacy">Privacy</string>
    <string name="synced_folders_configure_folders">Configure folders</string>
</resources>